--- a/pom.xml
+++ b/pom.xml
@@ -62,10 +62,10 @@
 			<artifactId>spring-data-commons</artifactId>
 		</dependency>
 		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-            <scope>provided</scope>
-        </dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
@@ -77,6 +77,11 @@
 			<groupId>net.sf.rubycollect4j</groupId>
 			<artifactId>rubycollect4j</artifactId>
 			<version>2.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.wnameless.json</groupId>
+			<artifactId>json-flattener</artifactId>
+			<version>0.12.0</version>
 		</dependency>
 
 		<!-- Query DSL -->
