--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>3.1.1</version>
+        </dependency>
 
         <!-- Query DSL -->
         <dependency>
