--- a/pom.xml
+++ b/pom.xml
@@ -234,6 +234,9 @@
             <goals>
               <goal>jar</goal>
             </goals>
+            <configuration>
+              <failOnError>false</failOnError>
+            </configuration>
           </execution>
         </executions>
         <dependencies>
