--- a/pom.xml
+++ b/pom.xml
@@ -135,11 +135,6 @@
       <artifactId>auto-service-annotations</artifactId>
       <version>1.0.1</version>
     </dependency>
-    <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <version>1.3.2</version>
-    </dependency>
 
     <!-- Query DSL -->
     <dependency>
@@ -155,6 +150,13 @@
           <artifactId>mongo-java-driver</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+
+    <!-- APT -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
     </dependency>
 
     <!-- Test -->
