--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
     </developer>
   </developers>
 
+  <properties>
+    <java.version>17</java.version>
+  </properties>
+
   <distributionManagement>
     <snapshotRepository>
       <id>ossrh</id>
@@ -130,11 +134,6 @@
       <artifactId>auto-service</artifactId>
       <version>1.0.1</version>
     </dependency>
-    <dependency>
-      <groupId>com.google.auto.service</groupId>
-      <artifactId>auto-service-annotations</artifactId>
-      <version>1.0.1</version>
-    </dependency>
 
     <!-- Query DSL -->
     <dependency>
@@ -150,13 +149,6 @@
           <artifactId>mongo-java-driver</artifactId>
         </exclusion>
       </exclusions>
-    </dependency>
-
-    <!-- APT -->
-    <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <version>1.3.2</version>
     </dependency>
 
     <!-- Test -->
@@ -180,36 +172,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>default-compile</id>
-            <configuration>
-              <!-- compile everything to ensure module-info contains right entries -->
-              <release>11</release>
-            </configuration>
-          </execution>
-          <execution>
-            <id>base-compile</id>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-            <!-- recompile everything for target VM except the module-info.java -->
-            <configuration>
-              <excludes>
-                <exclude>module-info.java</exclude>
-              </excludes>
-            </configuration>
-          </execution>
-        </executions>
-        <!-- defaults for compile and testCompile -->
-        <configuration>
-          <!-- Only required when JAVA_HOME isn't at least Java 9 and when haven't configured the
-          maven-toolchains-plugin -->
-          <jdkToolchain>
-            <version>9</version>
-          </jdkToolchain>
-          <release>8</release>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
