--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,16 @@
       <artifactId>jakarta.inject-api</artifactId>
       <version>2.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.stateless4j</groupId>
+      <artifactId>stateless4j</artifactId>
+      <version>2.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf</artifactId>
+      <version>3.1.1.RELEASE</version>
+    </dependency>
 
     <!-- APT -->
     <dependency>
