Comment out gpg

--- a/pom.xml
+++ b/pom.xml
@@ -237,7 +237,7 @@
           </dependency>
         </dependencies>
       </plugin>
-      <plugin>
+      <!-- <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
         <version>3.0.1</version>
@@ -253,7 +253,7 @@
         <configuration>
           <executable>gpg</executable>
         </configuration>
-      </plugin>
+      </plugin> -->
     </plugins>
   </build>
 
