--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,11 @@
       <artifactId>thymeleaf</artifactId>
       <version>3.1.1.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <version>3.1.1</version>
+    </dependency>
 
     <!-- APT -->
     <dependency>
