--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
   </distributionManagement>
 
   <dependencies>
+    <!-- Spring Boot Up-->
+    <dependency>
+      <groupId>com.github.wnameless.spring.boot.up</groupId>
+      <artifactId>spring-boot-up-core</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+
     <!-- Spring -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
