--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.wnameless.spring</groupId>
   <artifactId>spring-boot-up</artifactId>
-  <version>0.4.2-SNAPSHOT</version>
+  <version>0.4.3-SNAPSHOT</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.2</version>
+    <version>3.1.3</version>
   </parent>
 
   <name>spring-boot-up</name>
@@ -62,6 +62,11 @@
     <dependency>
       <groupId>com.github.wnameless.spring.boot.up</groupId>
       <artifactId>spring-boot-up-core</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.wnameless.spring.boot.up</groupId>
+      <artifactId>spring-boot-up-data-mongodb</artifactId>
       <version>3.0.0</version>
     </dependency>
 
