--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.wnameless.spring</groupId>
   <artifactId>spring-boot-up</artifactId>
-  <version>0.4.4-SNAPSHOT</version>
+  <version>0.4.5-SNAPSHOT</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -69,6 +69,11 @@
       <artifactId>spring-boot-up-data-mongodb</artifactId>
       <version>3.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.wnameless.spring.boot.up</groupId>
+      <artifactId>spring-boot-up-apt</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+    </dependency>
 
     <!-- Spring -->
     <dependency>
@@ -122,28 +127,9 @@
       <version>32.1.2-jre</version>
     </dependency>
     <dependency>
-      <groupId>org.atteo</groupId>
-      <artifactId>evo-inflector</artifactId>
-      <version>1.3</version>
-    </dependency>
-    <dependency>
-      <groupId>com.squareup</groupId>
-      <artifactId>javapoet</artifactId>
-      <version>1.13.0</version>
-    </dependency>
-    <dependency>
       <groupId>com.github.wnameless</groupId>
       <artifactId>advanced-optional</artifactId>
       <version>1.0.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.github.ben-manes.caffeine</groupId>
-      <artifactId>caffeine</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.inject</groupId>
-      <artifactId>jakarta.inject-api</artifactId>
-      <version>2.0.1</version>
     </dependency>
     <dependency>
       <groupId>com.github.stateless4j</groupId>
@@ -161,15 +147,8 @@
       <version>3.1.1</version>
     </dependency>
 
-    <!-- APT -->
-    <dependency>
-      <groupId>com.google.auto.service</groupId>
-      <artifactId>auto-service</artifactId>
-      <version>1.0.1</version>
-    </dependency>
-
     <!-- Query DSL -->
-    <dependency>
+    <!-- <dependency>
       <groupId>com.querydsl</groupId>
       <artifactId>querydsl-apt</artifactId>
     </dependency>
@@ -182,7 +161,7 @@
           <artifactId>mongo-java-driver</artifactId>
         </exclusion>
       </exclusions>
-    </dependency>
+    </dependency> -->
 
     <!-- Test -->
     <dependency>
@@ -213,7 +192,7 @@
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.6.8</version>
+        <version>1.6.13</version>
         <extensions>true</extensions>
         <configuration>
           <serverId>ossrh</serverId>
@@ -258,7 +237,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
-        <version>3.0.1</version>
+        <version>3.1.0</version>
         <executions>
           <execution>
             <id>sign-artifacts</id>
@@ -298,11 +277,6 @@
         <configuration>
           <useModulePath>false</useModulePath> <!-- tests use classpath -->
         </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>3.1.2</version>
       </plugin>
     </plugins>
   </build>
