--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.wnameless.spring</groupId>
   <artifactId>spring-boot-up</artifactId>
-  <version>0.4.6-SNAPSHOT</version>
+  <version>0.4.7-SNAPSHOT</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -70,9 +70,9 @@
       <version>3.0.1</version>
     </dependency>
     <dependency>
-      <groupId>com.github.wnameless.spring.boot.up</groupId>
-      <artifactId>spring-boot-up-apt</artifactId>
-      <version>3.0.0</version>
+      <groupId>com.github.wnameless.apt</groupId>
+      <artifactId>apt-constant-generator</artifactId>
+      <version>1.0.0</version>
     </dependency>
 
     <!-- Spring -->
