--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,10 @@
 
     <!-- Util -->
     <dependency>
+      <groupId>jakarta.persistence</groupId>
+      <artifactId>jakarta.persistence-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.scalified</groupId>
       <artifactId>tree</artifactId>
       <version>0.2.5</version>
@@ -127,11 +131,6 @@
       <version>32.1.2-jre</version>
     </dependency>
     <dependency>
-      <groupId>com.github.wnameless</groupId>
-      <artifactId>advanced-optional</artifactId>
-      <version>1.0.2</version>
-    </dependency>
-    <dependency>
       <groupId>com.github.stateless4j</groupId>
       <artifactId>stateless4j</artifactId>
       <version>2.6.0</version>
@@ -139,7 +138,6 @@
     <dependency>
       <groupId>org.thymeleaf</groupId>
       <artifactId>thymeleaf</artifactId>
-      <version>3.1.2.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.modelmapper</groupId>
