--- a/src/main/resources/static/react-form/nodejs/package.json
+++ b/src/main/resources/static/react-form/nodejs/package.json
@@ -3,14 +3,22 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.2",
     "@rjsf/bootstrap-4": "^5.13.2",
     "@rjsf/core": "^5.13.2",
+    "@rjsf/mui": "^5.13.2",
     "@rjsf/utils": "^5.13.2",
     "@rjsf/validator-ajv8": "^5.13.2",
     "html-react-parser": "^4.2.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "styled-components": "^6.1.0",
     "watch": "^1.0.2"
   },
   "devDependencies": {
@@ -18,7 +26,9 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.1"
