--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
       <artifactId>modelmapper</artifactId>
       <version>3.1.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <version>2.8.0</version>
+    </dependency>
 
     <!-- Test -->
     <dependency>
