--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.wnameless.spring</groupId>
   <artifactId>spring-boot-up</artifactId>
-  <version>0.7.1-SNAPSHOT</version>
+  <version>0.7.2-SNAPSHOT</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -72,6 +72,11 @@
     <dependency>
       <groupId>com.github.wnameless.apt</groupId>
       <artifactId>apt-constant-generator</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.wnameless.spring</groupId>
+      <artifactId>spelscriptassert</artifactId>
       <version>1.0.0</version>
     </dependency>
 
