--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.wnameless.spring</groupId>
   <artifactId>spring-boot-up</artifactId>
-  <version>0.13.3-SNAPSHOT</version>
+  <version>0.13.4-SNAPSHOT</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -70,14 +70,21 @@
       <version>3.1.0</version>
     </dependency>
     <dependency>
+      <groupId>com.github.wnameless.spring</groupId>
+      <artifactId>spelscriptassert</artifactId>
+      <version>1.1.0</version>
+    </dependency>
+
+    <!-- Mine -->
+    <dependency>
       <groupId>com.github.wnameless.apt</groupId>
       <artifactId>apt-constant-generator</artifactId>
       <version>1.0.0</version>
     </dependency>
     <dependency>
-      <groupId>com.github.wnameless.spring</groupId>
-      <artifactId>spelscriptassert</artifactId>
-      <version>1.1.0</version>
+      <groupId>com.github.wnameless.json</groupId>
+      <artifactId>json-schema-data-yamlifier</artifactId>
+      <version>0.0.2-SNAPSHOT</version>
     </dependency>
 
     <!-- Spring -->
@@ -173,11 +180,6 @@
       <groupId>com.networknt</groupId>
       <artifactId>json-schema-validator</artifactId>
       <version>1.5.6</version>
-    </dependency>
-    <dependency>
-      <groupId>com.amihaiemil.web</groupId>
-      <artifactId>eo-yaml</artifactId>
-      <version>8.0.6</version>
     </dependency>
     <dependency>
       <groupId>org.jsoup</groupId>
@@ -302,7 +304,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.5.2</version>
+        <version>3.5.3</version>
         <configuration>
           <useModulePath>false</useModulePath> <!-- tests use classpath -->
         </configuration>
