--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.wnameless.spring</groupId>
   <artifactId>spring-boot-up</artifactId>
-  <version>0.16.30-SNAPSHOT</version>
+  <version>0.17.0-SNAPSHOT</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.5.7</version>
+    <version>3.5.8</version>
   </parent>
 
   <name>spring-boot-up</name>
@@ -45,6 +45,12 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>com.github.wnameless.json</groupId>
+      <artifactId>json-flattener</artifactId>
+      <version>0.18.0</version>
+    </dependency>
+
     <!-- Spring Boot Up-->
     <dependency>
       <groupId>com.github.wnameless.spring.boot.up</groupId>
@@ -118,7 +124,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.19.0</version>
+      <version>3.20.0</version>
     </dependency>
     <dependency>
       <groupId>jakarta.persistence</groupId>
@@ -141,7 +147,7 @@
     <dependency>
       <groupId>org.modelmapper</groupId>
       <artifactId>modelmapper</artifactId>
-      <version>3.2.5</version>
+      <version>3.2.6</version>
     </dependency>
     <dependency>
       <groupId>com.jayway.jsonpath</groupId>
@@ -161,7 +167,7 @@
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
-      <version>5.4.1</version>
+      <version>5.5.0</version>
     </dependency>
     <dependency>
       <groupId>net.sf.rubycollect4j</groupId>
